syntax = "proto3";

import "value.proto";

option java_multiple_files = true;
option java_package = "org.polypheny.db.protointerface.proto";
option java_outer_classname = "StatementRequests";

package polypheny.protointerface;

message ExecuteUnparameterizedStatementRequest {
  string language_name = 1;
  string statement = 2;
  optional int32 fetch_size = 3;
  optional string namespace_name = 4;
}

message ExecuteUnparameterizedStatementBatchRequest {
  repeated ExecuteUnparameterizedStatementRequest statements = 1;
}

message PrepareStatementRequest {
  string language_name = 1;
  string statement = 2;
  optional string namespace_name = 3;
}

message ExecuteIndexedStatementRequest {
  int32 statement_id = 1;
  IndexedParameters parameters = 2;
  optional int32 fetch_size = 3;
}

message ExecuteIndexedStatementBatchRequest {
  int32 statement_id = 1;
  repeated IndexedParameters parameters = 2;
}

message ExecuteNamedStatementRequest {
  int32 statement_id = 1;
  NamedParameters parameters = 2;
  optional int32 fetch_size = 3;
}

message IndexedParameters {
  repeated ProtoValue parameters = 1;
}

message NamedParameters {
  map<string, ProtoValue> parameters = 1;
}

message CloseStatementRequest {
  int32 statement_id = 1;
}

message FetchRequest {
  int32 statement_id = 1;
  optional int32 fetch_size = 2;
}
